# EdgeBrain

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/knowledge_base/: architecture.md  edgebrain_architecture.md
src/edgebrain/: config.py
src/edgebrain/api/: sse_engine.py
src/edgebrain/core/: config.py  engine.py  mcp_client.py  rag_node.py  screen_awareness_node.py  self_healing_node.py  state.py  vlm_node.py
src/edgebrain/security/: gateway.py
src/edgebrain/skills/: loader.py  system_info_skill.json
src/edgebrain/skills/handlers/: sys_info_handler.py
src/edgebrain/utils/: monitor.py  quantization_manager.py
tests/: test_e2e.py  test_mcp_client.py  test_quantization_benchmark.py  test_rag_vlm.py  test_screen_awareness.py  test_self_healing.py  test_sse_client.py  test_vlm_llava.py
