[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgebrain-pro"
version = "3.0.0a1"
description = "Industrial-grade Edge AI Agent Framework with Declarative Skills and Cross-Platform Support"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9, <3.13"
authors = [
    {name = "Chen Runbin", email = "chenrunbin@zeekr.com"},
]
keywords = ["agent", "langgraph", "llamaindex", "edge-ai", "android", "qnn", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Android",
]

# 核心依赖：确保在 Linux 和 Android (Termux/Chaquopy) 上的基础运行能力
dependencies = [
    # --- Agent Orchestration & RAG ---
    "langgraph>=0.2.0",
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    
    # --- Vector Database ---
    "chromadb>=0.4.0",
    
    # --- Data Validation & Config ---
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    
    # --- Logging & Async ---
    "loguru>=0.7.0",
    "aiohttp>=3.8.0",
    
    # --- Numerical & Image Processing (Headless for Android) ---
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    
    # --- System Monitoring ---
    "psutil>=5.9.0",
    
    # --- Networking & Tokenization ---
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
    
    # --- MCP (Model Context Protocol) Support ---
    "mcp==1.1.0",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

# 端侧推理后端：Qualcomm QNN (针对 8397 等平台)
qnn = [
    "qnn-runtime", 
    "onnxruntime-qnn>=1.16.0",
]

# 端侧推理后端：ONNX Runtime (通用 ARM64/Linux)
onnx = [
    "onnxruntime>=1.16.0",
]

# 本地大模型服务：Ollama / vLLM 客户端支持
local-llm = [
    "ollama>=0.1.0",
    "vllm>=0.2.0",
]

# 多模态与视觉语言模型支持
vlm = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0",
]

# 监控与评估：LangFuse & Ragas
observability = [
    "langfuse>=2.0.0",
    "ragas>=0.0.20",
]

# 分布式协同：A2A Protocol
a2a = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["edgebrain*"]
namespaces = false

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
